nginx-configmap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-configmap-service
spec:
  selector:
    app: nginx-configmap-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
