nginx-configmap/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-configmap-route
spec:
  to:
    kind: Service
    name: nginx-configmap-service
  port:
    targetPort: 8080
